--- a/styles/Auth.module.css
+++ b/styles/Auth.module.css
@@ -14,7 +14,7 @@
   font-weight: 700;
   text-align: center;
 }
-.button {
+.providerButton {
   width: 250px;
   margin: 10px;
   font-weight: 700;
