--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,6 +4,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 0;
+  margin: 0;
 }
 
 .main {
@@ -62,6 +64,7 @@
     width: 100%;
     display: flex;
     flex-direction: row;
+    overflow-x: auto;
   }
   .postsContainer {
     width: 100%;
