--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,7 +21,7 @@ a {
   justify-content: space-between;
   background-color: #fff;
   color: #fff;
-  padding: 1rem 2rem;
+  padding: 10px;
   width: 100%;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
