--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -16,9 +16,10 @@
   width: 100%;
 }
 .profilesAside {
+  z-index: 4;
   padding: 10px;
   width: 15%;
-  min-width: 180px;
+  min-width: 250px;
   border: 1px solid rgb(0, 0, 0);
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
@@ -28,8 +29,8 @@
   min-width: 250px;
   border: 1px solid rgb(0, 0, 0);
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-
   box-sizing: content-box;
+
   /*padding-bottom: 20px;*/
 }
 .futurAside {
@@ -41,7 +42,7 @@
 }
 
 .title {
-  margin: 20px auto;
+  margin: 40px auto;
   line-height: 1.15;
   font-size: 2rem;
   margin-bottom: 2rem;
@@ -65,6 +66,7 @@
     display: flex;
     flex-direction: row;
     overflow-x: auto;
+    overflow-y: none;
   }
   .postsContainer {
     width: 100%;
