--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -6,7 +6,6 @@
   cursor: pointer;
   padding: 0 5px;
   position: relative;
-
   margin: 5px 2px;
 }
 
@@ -58,7 +57,7 @@
   width: 300px;
   border: 1px solid #1565c0;
   background-color: white;
-  z-index: 3;
+  z-index: 4;
   border-radius: 5%;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
@@ -74,4 +73,12 @@
   height: 3%;
   object-fit: cover;
   margin: 5px auto;
+}
+
+@media (max-width: 992px) {
+  /*.profileView {
+    position: relative;
+    top: -10%;
+    left: 10%;
+  }*/
 }
