--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -62,6 +62,18 @@
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
+.profileViewAside {
+  position: absolute;
+  top: -10%;
+  left: 52%;
+  width: 300px;
+  border: 1px solid #1565c0;
+  background-color: white;
+  z-index: 4;
+  border-radius: 5%;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
 .uploadAvatar {
   display: flex;
   align-items: center;
@@ -76,9 +88,9 @@
 }
 
 @media (max-width: 992px) {
-  /*.profileView {
+  .profileViewAside {
     position: relative;
     top: -10%;
     left: 10%;
-  }*/
+  }
 }
