--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,6 +23,11 @@ a {
   color: #fff;
   padding: 10px;
   width: 100%;
+  height: 15vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 5;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 .logo {
