--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -60,6 +60,7 @@
     flex-direction: column;
   }
   .profilesAside {
+    margin: 0 auto;
     padding: 10px;
     width: 100%;
     display: flex;
