--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -67,6 +67,7 @@
     flex-direction: row;
     overflow-x: auto;
     overflow-y: none;
+    background-color: aquamarine;
   }
   .postsContainer {
     width: 100%;
