--- a/styles/Comments.module.css
+++ b/styles/Comments.module.css
@@ -18,6 +18,7 @@
   background-color: white;
   overflow-y: auto;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  transition: all 0.7s linear;
 }
 
 .commentForm {
