--- a/styles/globals.css
+++ b/styles/globals.css
@@ -45,11 +45,11 @@ a {
   cursor: pointer;
 }
 .header-avatar {
-  width: 90px;
-  height: 70px;
+  width: 70px;
+  height: 65px;
   margin-left: 25px;
-  border-radius: 20%;
-  object-fit: cover;
+  /*border-radius: 20%;
+  object-fit: fill;*/
   border: 2px solid #1565c0;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
