--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -65,6 +65,7 @@
     width: 100%;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     overflow-x: auto;
     overflow-y: none;
   }
