--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,6 +51,8 @@ a {
   width: 70px;
   height: 65px;
   margin-left: 35px;
+  border-radius: 50%;
+  object-fit: cover;
   /*border-radius: 20%;
   object-fit: fill;*/
   border: 2px solid #1565c0;
