--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -12,6 +12,7 @@
   flex: 1;
   display: flex;
   justify-content: flex-start;
+
   flex-direction: row;
   width: 100%;
 }
@@ -26,7 +27,7 @@
 .postsContainer {
   padding: 10px;
   width: 80%;
-  min-width: 250px;
+  min-width: 300px;
   border: 1px solid rgb(0, 0, 0);
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   box-sizing: content-box;
@@ -59,6 +60,8 @@
 @media (max-width: 992px) {
   .main {
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
   .profilesAside {
     margin: 0 auto;
