--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,17 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.container {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 15vh 0;
+  margin: 0;
+}
+
 .header {
   display: flex;
   align-items: center;
@@ -37,6 +48,7 @@ a {
   font-size: 1.6rem;
   display: flex;
   flex-wrap: nowrap;
+  user-select: none;
 }
 .profile {
   font-weight: 500;
@@ -48,9 +60,8 @@ a {
   cursor: pointer;
 }
 .header-avatar {
-  width: 70px;
-  height: 65px;
-  margin-left: 25px;
+  width: 65px;
+  height: 60px;
   border-radius: 50%;
   object-fit: cover;
   border: 2px solid #1565c0;
@@ -104,4 +115,38 @@ a {
 
 .footer {
   height: 10vh;
+}
+
+@media (max-width: 768px) {
+  .btn-signin {
+    font-size: 1rem;
+    font-weight: 600;
+    padding: 0.8rem;
+    width: 1.5rem;
+  }
+  .header-avatar {
+    width: 60px;
+    height: 55px;
+  }
+}
+@media (max-width: 576px) {
+  .btn-signin {
+    font-size: 0.8rem;
+    font-weight: 500;
+    padding: 0.6rem;
+    width: 1.2rem;
+  }
+  .header-avatar {
+    width: 55px;
+    height: 50px;
+  }
+}
+
+@media (max-width: 400px) {
+  .btn-signin {
+    font-size: 0.5rem;
+    font-weight: 300;
+    padding: 0.5rem;
+    width: 0.8rem;
+  }
 }
