--- a/styles/globals.css
+++ b/styles/globals.css
@@ -139,14 +139,21 @@ a {
   .header-avatar {
     width: 55px;
     height: 50px;
+    margin: 0 70px;
+  }
+  .header {
+    justify-content: flex-start;
   }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 375px) {
   .btn-signin {
     font-size: 0.5rem;
     font-weight: 300;
     padding: 0.5rem;
     width: 0.8rem;
+  }
+  .header-avatar {
+    margin-left: 30px;
   }
 }
