--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,6 @@
+:root {
+  --color-bgd2: #8c8cba;
+}
 html,
 body {
   padding: 0;
@@ -18,6 +21,7 @@ a {
 
 .container {
   min-height: 100vh;
+  min-width: 350px;
   display: flex;
   flex-direction: column;
   justify-content: center;
