--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,19 +8,16 @@
 .profilesAside {
   padding: 10px;
   width: 10%;
-  border: 1px solid rgb(0, 0, 0);
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 .postsContainer {
   padding: 10px;
   width: 80%;
-  border: 1px solid rgb(0, 0, 0);
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 .futurAside {
   padding: 10px;
   width: 10%;
-  border: 1px solid rgb(0, 0, 0);
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
@@ -63,7 +60,7 @@
     width: 100%;
   }
   .futurAside {
-    width: 100%;
+    display: none;
   }
 }
 @media (max-width: 576px) {
