--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,12 @@
 :root {
-  --color-bgd2: #8c8cba;
+  --color-bgd2: #eae3df;
+  --color-bgd1: #dfdfea;
 }
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
   scroll-behavior: smooth;
 }
 
@@ -26,8 +26,9 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 12vh 0;
+  padding: 70px 0;
   margin: 0;
+  background-color: var(--color-bgd1);
 }
 
 .header {
@@ -38,13 +39,14 @@ a {
   color: #fff;
   padding: 10px;
   width: 100%;
-  height: 12vh;
+  height: 70px;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 5;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   min-width: 450px;
+  background-color: var(--color-bgd1);
 }
 .logo {
   font-weight: 700;
@@ -85,7 +87,6 @@ a {
   line-height: 1;
   margin: 5px;
   padding: 0.8rem;
-
   text-align: center;
   align-items: center;
   justify-content: center;
@@ -97,6 +98,7 @@ a {
   background-size: 400%;
   -webkit-transition: all 300ms ease-in-out;
   transition: all 300ms ease-in-out;
+  border-radius: 3px;
 }
 
 .btn-signin:hover {
