--- a/styles/globals.css
+++ b/styles/globals.css
@@ -45,13 +45,14 @@ a {
   left: 0;
   z-index: 5;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-  min-width: 450px;
+  min-width: 270x;
   background-color: var(--color-bgd1);
 }
 .logo {
   font-weight: 700;
   color: #000;
   font-size: 1.6rem;
+  margin-right: 5px;
   display: flex;
   flex-wrap: nowrap;
   user-select: none;
@@ -59,9 +60,8 @@ a {
 .profile {
   font-weight: 500;
   color: #000;
-  font-size: 1.5rem;
+  font-size: 1.1rem;
   align-items: center;
-  min-width: 180px;
   display: flex;
   cursor: pointer;
 }
@@ -132,30 +132,25 @@ a {
   }
 }
 @media (max-width: 428px) {
-  .btn-signin {
-    font-size: 0.8rem;
-    font-weight: 500;
-    padding: 0.6rem;
-    width: 1.2rem;
-  }
   .header-avatar {
     width: 55px;
     height: 50px;
-    margin: 0 70px;
   }
+
   .header {
-    justify-content: flex-start;
+    padding: 5px;
   }
 }
 
-@media (max-width: 375px) {
+@media (max-width: 385px) {
   .btn-signin {
-    font-size: 0.5rem;
+    font-size: 0.8rem;
     font-weight: 300;
     padding: 0.5rem;
-    width: 0.8rem;
+    width: 1.2rem;
   }
   .header-avatar {
-    margin-left: 30px;
+    width: 45px;
+    height: 40px;
   }
 }
