--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -49,12 +49,12 @@
     justify-content: center;
   }
   .profilesAside {
-    margin: 0 auto;
-    padding: 10px;
+    padding: 10px 5px;
     width: 100%;
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    /*flex-wrap: wrap;*/
+    overflow-x: auto;
   }
   .postsContainer {
     width: 100%;
