--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -55,12 +55,13 @@
   position: absolute;
   top: -10%;
   left: 52%;
-  width: 300px;
+  width: 0;
   border: 1px solid #1565c0;
   background-color: white;
   z-index: 4;
   border-radius: 5%;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  transition: width 0.3s ease-out;
 }
 
 .profileViewAside {
@@ -68,12 +69,13 @@
   padding: 0 2px;
   top: 10%;
   left: 80%;
-  width: 120px;
+  width: 0;
   border: 1px solid #1565c0;
   background-color: rgba(255, 255, 255, 0.786);
   z-index: 4;
   border-radius: 5%;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  transition: width 0.4s ease-out;
 }
 
 .uploadAvatar {
